# blufi-core

./: .gitignore  CMakeLists.txt  Core.kt  LICENSE  Makefile  android.cpp  blufi.cpp  data_chan.cpp  dh.cpp  make-android.sh  make-wasm.sh  make.sh  mixin.js  msg.cpp  readme.md  test.cpp  wasm.cpp
3rd/md5-c/: CMakeLists.txt  Makefile  md5.h
3rd/uaes/: uaes.c  uaes.h
include/: blufi.h  blufi_c.h  data_chan.h  dh.h  msg.h
